syntax="proto3";

package UserGrowth;
option go_package="growth/pb";


import "google/api/annotations.proto";


service UserCoin {
  // 获取所有的积分任务列表
  rpc ListTasks(ListTasksRequest) returns (ListTasksReply) {
    option (google.api.http) = {
      get: "/v1/UserGrowth.UserCoin/ListTasks"
    };
  }
  // 获取用户的积分信息
  rpc UserCoinInfo(UserCoinInfoRequest) returns (UserCoinInfoReply) {
    option (google.api.http) = {
      post: "/v1/UserGrowth.UserCoin/UserCoinInfo"
      body: "*"
    };
  }
  // 获取用户的积分明细列表
  rpc UserDetails(UserDetailsRequest) returns (UserDetailsReply) {
    option (google.api.http) = {
      post: "/v1/UserGrowth.UserCoin/UserDetails"
      body: "*"
    };
  }
  // 调整用户积分-奖励和惩罚都是这个接口
  rpc UserCoinChange(UserCoinChangeRequest) returns (UserCoinChangeReply) {
    option (google.api.http) = {
      post: "/v1/UserGrowth.UserCoin/UserCoinChange"
      body: "*"
    };
  }
}

service UserGrade {
  // 获取所有的等级信息列表
  rpc ListGrades(ListGradesRequest) returns (ListGradesReply) {
    option (google.api.http) = {
      get: "/v1/UserGrowth.UserGrade/ListGrades"
    };
  }
  // 获取等级的特权列表
  rpc ListGradePrivileges(ListGradePrivilegesRequest) returns (ListGradePrivilegesReply) {
    option (google.api.http) = {
      post: "/v1/UserGrowth.UserGrade/ListGradePrivileges"
      body: "*"
    };
  }
  // 检查用户是否有某个产品特权
  rpc CheckUserPrivilege(CheckUserPrivilegeRequest) returns (CheckUserPrivilegeReply) {
    option (google.api.http) = {
      post: "/v1/UserGrowth.UserGrade/CheckUserPrivilege"
      body: "*"
    };
  }
  // 获取用户的等级信息
  rpc UserGradeInfo(UserGradeInfoRequest) returns (UserGradeInfoReply) {
    option (google.api.http) = {
      post: "/v1/UserGrowth.UserGrade/UserGradeInfo"
      body: "*"
    };
  }
  // 调整用户的等级成长值
  rpc UserGradeChange(UserGradeChangeRequest) returns (UserGradeChangeReply) {
    option (google.api.http) = {
      post: "/v1/UserGrowth.UserGrade/UserGradeChange"
      body: "*"
    };
  }
}

message ListTasksRequest {
}

message ListTasksReply {
  repeated TbCoinTask datalist = 1;
}

message UserCoinInfoRequest {
  int32 uid = 1;
}

message UserCoinInfoReply {
  TbCoinUser data = 1;
}

message UserDetailsRequest {
  int32 uid = 1;
  int32 page = 2;
  int32 size = 3;
}

message UserDetailsReply {
  repeated TbCoinDetail datalist = 1;
  int32 total = 2;
}

message UserCoinChangeRequest {
  int32 uid = 1;
  string task = 2;
  int32 coin = 3;
}

message UserCoinChangeReply {
  TbCoinUser user = 1;
}

message ListGradesRequest {
}

message ListGradesReply {
  repeated TbGradeInfo datalist = 1;
}

message ListGradePrivilegesRequest {
  int32 grade_id = 1;
}

message ListGradePrivilegesReply {
  repeated TbGradePrivilege datalist = 1;
}

message CheckUserPrivilegeRequest {
  int32 uid = 1;
  string product = 2;
  string function = 3;
}

message CheckUserPrivilegeReply {
  bool data = 1;
}

message UserGradeInfoRequest {
  int32 uid = 1;
}

message UserGradeInfoReply {
  TbGradeUser data = 1;
}

message UserGradeChangeRequest {
  int32 uid = 1;
  int32 score = 2;
}

message UserGradeChangeReply {
  TbGradeUser data = 1;
}

message TbCoinDetail {
  int32 id = 1;
  int32 uid = 2;
  int32 task_id = 3;
  int32 coin = 4;
  string sys_created = 5;
  string sys_updated = 6;
}

message TbCoinTask {
  int32 id = 1;
  string task = 2;
  int32 coin = 3;
  int32 limit = 4;
  string start = 5;
  string sys_created = 6;
  string sys_updated = 7;
  int32 sys_status = 8;
}

message TbCoinUser {
  int32 id = 1;
  int32 uid = 2;
  int32 coins = 3;
  string sys_created = 4;
  string sys_updated = 5;
}

message TbGradeInfo {
  int32 id = 1;
  string title = 2;
  string description = 3;
  int32 score = 4;
  int32 expired = 5;
  string sys_created = 6;
  string sys_updated = 7;
}

message TbGradePrivilege {
  int32 id = 1;
  int32 grade_id = 2;
  string product = 3;
  string function = 4;
  string description = 5;
  int32 expired = 6;
  string sys_created = 7;
  string sys_updated = 8;
  int32 sys_status = 9;
}

message TbGradeUser {
  int32 id = 1;
  int32 uid = 2;
  int32 grade_id = 3;
  string expired = 4;
  int32 score = 5;
  string sys_created = 6;
  string sys_updated = 7;
}
